个人博客第二次提交

--- a/src/main/resources/static/zwerowewvnzwoenwvw/login.html
+++ b/src/main/resources/static/zwerowewvnzwoenwvw/login.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>登录页面</title>
-    <link href="css/lrtk.css" rel="stylesheet"/>
+    <link href="../css/lrtk.css" rel="stylesheet"/>
 </head>
 <body>
 <div id="login">
@@ -37,13 +37,13 @@
                 </div>
                 <div class="form-actions">
                     <a href="https://www.jianshu.com/u/64d78b078475" tabindex="5"
-                       class="btn pull-left btn-link">简书@一封情书写给JAVA</a>
+                       class="btn pull-left btn-link"></a>
                     <button id="submitBtn" tabindex="4" class="btn btn-primary">Login</button>
                 </div>
             </form>
         </div>
     </div>
-    <script src="js/jquery/2.0.0/jquery.min.js"></script>
+    <script src="../js/jquery/2.0.0/jquery.min.js"></script>
     <script>
         $(function () {
 
