--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -65,9 +65,9 @@
 		<div id="footer">
 			<!--左下角的icon-->
 			<div>
-				<a href="https://www.jianshu.com/u/64d78b078475" style="margin-left: 20px;" title="简书ID：一封情书写个JAVA"><img class="icon" src="img/jianshu-icon.png" /></a>
-				<img title="知乎ID：我没有三颗心脏" class="icon" src="img/zhihu-icon.png" />
-				<a href="https://www.jianshu.com/u/64d78b078475" style="margin-left: 20px;" title="微信昵称：Aloha^"><img class="icon" src="img/wechat-icon.png" /></a>
+				<a	 href="https://www.jianshu.com/u/64d78b078475" style="margin-left: 20px;" title="简书ID：一封情书写个JAVA"><img class="icon" src="img/jianshu-icon.png" /></a>
+				<img title="知乎ID：一封情书写个JAVA" class="icon" src="img/zhihu-icon.png" />
+				<img title="微信ID：TnT960909" class="icon" src="img/wechat-icon.png" /></a>
 			</div>
 
 			<!--左上角的声明-->
