个人博客第三次提交

--- a/src/main/resources/static/admin/index.html
+++ b/src/main/resources/static/admin/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
     <title>Wmyskxz个人博客后台</title>
     <!-- Bootstrap Styles-->
-    <link href="assets/css/bootstrap.css" rel="stylesheet"/>
+    <link href="./assets/css/bootstrap.css" rel="stylesheet"/>
     <!-- FontAwesome Styles-->
     <!--<link href="http://fontawesome.io/assets/font-awesome/css/font-awesome.css" rel="stylesheet"/>-->
     <!--<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.1.0/css/all.css" integrity="sha384-lKuwvrZot6UHsBSfcMvOkWwlCMgc0TaWr+30HWe3a4ltaBwTZhyTEggF5tJv8tbt" crossorigin="anonymous">-->
@@ -226,18 +226,18 @@
 
 <!-- JS Scripts-->
 <!-- jQuery Js -->
-<script src="assets/js/jquery-1.10.2.js"></script>
+<script src="./assets/js/jquery-1.10.2.js"></script>
 <!-- Bootstrap Js -->
-<script src="assets/js/bootstrap.min.js"></script>
+<script src="./assets/js/bootstrap.min.js"></script>
 <!-- Metis Menu Js -->
-<script src="assets/js/jquery.metisMenu.js"></script>
+<script src="./assets/js/jquery.metisMenu.js"></script>
 <!-- Morris Chart Js -->
-<script src="assets/js/morris/raphael-2.1.0.min.js"></script>
+<!--<script src="./assets/js/morris/raphael-2.1.0.min.js"></script>-->
 <!-- DATA TABLE SCRIPTS -->
-<script src="assets/js/dataTables/jquery.dataTables.js"></script>
-<script src="assets/js/dataTables/dataTables.bootstrap.js"></script>
+<script src="./assets/js/dataTables/jquery.dataTables.js"></script>
+<script src="./assets/js/dataTables/dataTables.bootstrap.js"></script>
 <!-- 引入自己写的JS -->
-<script src="assets/js/pages/index.js"></script>
+<script src="./assets/js/pages/index.js"></script>
 
 </body>
 
