--- a/src/main/resources/static/admin/article.html
+++ b/src/main/resources/static/admin/article.html
@@ -11,7 +11,7 @@
     <!--<link href="assets/css/font-awesome.css" rel="stylesheet" />-->
     <link href="//cdn.bootcss.com/font-awesome/4.4.0/css/font-awesome.min.css" rel="stylesheet">
     <!-- Morris Chart Styles-->
-    <link href="assets/js/morris/morris-0.4.3.min.css" rel="stylesheet"/>
+    <!--<link href="assets/js/morris/morris-0.4.3.min.css" rel="stylesheet"/>-->
     <!-- Custom Styles-->
     <link href="assets/css/custom-styles.css" rel="stylesheet"/>
     <!-- Google Fonts-->
