--- a/src/main/resources/static/admin/category.html
+++ b/src/main/resources/static/admin/category.html
@@ -192,8 +192,8 @@
 <!-- Metis Menu Js -->
 <script src="assets/js/jquery.metisMenu.js"></script>
 <!-- Morris Chart Js -->
-<script src="assets/js/morris/raphael-2.1.0.min.js"></script>
-<script src="assets/js/morris/morris.js"></script>
+<!--<script src="assets/js/morris/raphael-2.1.0.min.js"></script>-->
+<!--<script src="assets/js/morris/morris.js"></script>-->
 <!-- DATA TABLE SCRIPTS -->
 <script src="assets/js/dataTables/jquery.dataTables.js"></script>
 <script src="assets/js/dataTables/dataTables.bootstrap.js"></script>
