--- a/src/main/resources/static/admin/comment.html
+++ b/src/main/resources/static/admin/comment.html
@@ -148,21 +148,21 @@
 
 <!-- JS Scripts-->
 <!-- jQuery Js -->
-<script src="assets/js/jquery-1.10.2.js"></script>
+<script src="./assets/js/jquery-1.10.2.js"></script>
 <!-- Bootstrap Js -->
-<script src="assets/js/bootstrap.min.js"></script>
+<script src="./assets/js/bootstrap.min.js"></script>
 <!-- Metis Menu Js -->
-<script src="assets/js/jquery.metisMenu.js"></script>
+<script src="./assets/js/jquery.metisMenu.js"></script>
 <!-- Morris Chart Js -->
-<script src="assets/js/morris/raphael-2.1.0.min.js"></script>
-<script src="assets/js/morris/morris.js"></script>
+<script src="./assets/js/morris/raphael-2.1.0.min.js"></script>
+<!--<script src="./assets/js/morris/morris.js"></script>-->
 <!-- DATA TABLE SCRIPTS -->
-<script src="assets/js/dataTables/jquery.dataTables.js"></script>
-<script src="assets/js/dataTables/dataTables.bootstrap.js"></script>
+<script src="./assets/js/dataTables/jquery.dataTables.js"></script>
+<script src="./assets/js/dataTables/dataTables.bootstrap.js"></script>
 <!-- 引入自己写的JS -->
-<script src="assets/js/pages/commont.js"></script>
+<script src="./assets/js/pages/commont.js"></script>
 <!-- Custom Js -->
-<script src="assets/js/custom-scripts.js"></script>
+<script src="./assets/js/custom-scripts.js"></script>
 
 </body>
 
