--- a/src/main/resources/static/error.html
+++ b/src/main/resources/static/error.html
@@ -98,7 +98,7 @@
 	</head>
 
 	<body>
-		<p class="topimg"><img src="./img/error.png"> </p>
+		<p class="topimg"><img src="http://upload-images.jianshu.io/upload_images/7896890-2bec477df48e692d.png?imageMogr2/auto-orient/strip%7CimageView2/2/w/1240"> </p>
 		<p class="link">
 			<a href="index.html" target="_self">&#9666;返回首页</a>
 			<a target="_self" href="javascript:;" onClick="javascript:history.back(-1);">&#9666;返回上一页</a>
